--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -1,7 +1,7 @@
-/* NavBar.css */
 @import url('https://fonts.googleapis.com/css2?family=Krub&family=Noto+Sans+Thai&display=swap');
 
 .container_NavBar {
+    z-index: 100;
     background-color: #ffffff94;
     height: 50px;
     color: #333;
@@ -15,25 +15,25 @@
     backdrop-filter: blur(50px);
 }
 
-
 .Logo {
     height: 120%;
     width: auto;
     border-radius: 10px;
     margin-right: 1rem;
-    /* position: absolute;
-    left: 0; */
-    
-    /* justify-content: start; */
-    /* filter: drop-shadow(5px 5px 1px #000000); */
 }
 
 .dropdown_menu {
-    display: flex;
     text-align: center;
-    margin-top: 10px !important;
+    position: absolute;
     width: 250px;
-    /* height: 250px; */
+    margin-right: 30px;
+    top: 80px;
+    right: 0;
+    background-color: #ffdaeb;
+    border-radius: 8px;
+    box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    padding: 10px;
 
 }
 
@@ -45,13 +45,11 @@
     display: block;
     width: 250px;
     list-style-type: none;
-    /* background-color: #ffbaba; */
     background-color: #ffcae7;
     background-clip: padding-box;
     border-radius: 8px;
     outline: none;
     box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.507);
-    /* box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05); */
 }
 
 .ant-dropdown .ant-dropdown-menu {
@@ -59,14 +57,11 @@
 }
 
 /*======================================================================================*/
-
-
-
-
 .NameProgram {
     font-size: 24px;
     margin: 0;
     text-align: center;
+    cursor: pointer;
 }
 
 .user_Profile {
@@ -80,7 +75,6 @@
 .user_Profile p {
     margin: 0;
 }
-
 
 .btn_login {
     background-image: linear-gradient(to right, #AA076B 0%, #61045F 51%, #AA076B 100%);
